@@ -1,3 +1,15 @@
+2009-09-23  Stephen Turnbull  <stephen@xemacs.org>
+
+	* glyphs-eimage.c (png_instantiate):
+	Clean up PNG handling.  Fixes crash in issue570.
+
+	Pad eimage buffer to handle overrun in libpng (fix crash).
+	Reorder libpng setup and call png_read_update_info (display
+	  images with transparency correctly).
+	Make background handling code prettier.
+	Make comment style more consistent.
+	Remove some obsolete comments and #ifdefs.
+
 2009-09-20  Aidan Kehoe  <kehoea@parhasard.net>
 
 	* alloc.c (Flist): 
